k8s/admin.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: wap
  labels:
    name: wap
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-deployment
  namespace: wap # TODO: KILL TH IS CAUSE AARON SAID SO
  labels:
    app: admin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: admin
  template:
    metadata:
      namespace: wap
      labels:
        app: admin
    spec:
      containers:
        - name: admin-deployment
          image: stevenfollis/whackapod-admin # TODO: Update to DTR image
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
      serviceAccount: wap-admin
      serviceAccountName: wap-admin
---
apiVersion: v1
kind: Service
metadata:
  name: admin
  namespace: wap
  labels:
    app: admin
spec:
  ports:
    - port: 8080
  selector:
    app: admin
  type: NodePort
