k8s/api.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: api-deployment
  labels:
    app: api
  namespace: wap
spec:
  replicas: 12
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: api-deployment
          image: stevenfollis/whackapod-api # TODO: Update to DTR image
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: wap
  labels:
    app: api
spec:
  ports:
    - port: 8080
  selector:
    app: api
  type: NodePort
